// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-slider ant-slider-rtl ant-slider-horizontal"
>
  <div
    class="ant-slider-rail"
  />
  <div
    class="ant-slider-track"
    style="right: 0%; width: 0%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="ant-slider-handle"
    role="slider"
    style="right: 0%; transform: translateX(50%);"
    tabindex="0"
  />
</div>
`;

exports[`Slider should render in RTL direction 1`] = `
<div
  class="ant-slider ant-slider-rtl ant-slider-horizontal"
>
  <div
    class="ant-slider-rail"
  />
  <div
    class="ant-slider-track"
    style="right: 0%; width: 30%;"
  />
  <div
    class="ant-slider-step"
  />
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle ant-tooltip-open"
    role="slider"
    style="right: 30%; transform: translateX(50%);"
    tabindex="0"
  />
  <div>
    <div
      class="ant-tooltip ant-slider-tooltip ant-tooltip-rtl ant-zoom-down-appear ant-zoom-down-appear-prepare ant-zoom-down"
      style="opacity: 0;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should show correct placement tooltip when set tooltipPlacement 1`] = `
Array [
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle ant-tooltip-open"
    role="slider"
    style="bottom: 30%; transform: translateY(50%);"
    tabindex="0"
  />,
  <div>
    <div
      class="ant-tooltip ant-slider-tooltip ant-zoom-down-appear ant-zoom-down-appear-prepare ant-zoom-down"
      style="opacity: 0;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Slider should show correct placement tooltip when set tooltipPlacement 2`] = `
Array [
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle"
    role="slider"
    style="bottom: 30%; transform: translateY(50%);"
    tabindex="0"
  />,
  <div>
    <div
      class="ant-tooltip ant-slider-tooltip ant-zoom-down-leave ant-zoom-down-leave-start ant-zoom-down"
      style="pointer-events: none;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Slider should show tooltip when hovering slider handler 1`] = `
Array [
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle ant-tooltip-open"
    role="slider"
    style="left: 30%; transform: translateX(-50%);"
    tabindex="0"
  />,
  <div>
    <div
      class="ant-tooltip ant-slider-tooltip ant-zoom-down-appear ant-zoom-down-appear-prepare ant-zoom-down"
      style="opacity: 0;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
Array [
  <div
    aria-disabled="false"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-slider-handle"
    role="slider"
    style="left: 30%; transform: translateX(-50%);"
    tabindex="0"
  />,
  <div>
    <div
      class="ant-tooltip ant-slider-tooltip ant-zoom-down-leave ant-zoom-down-leave-start ant-zoom-down"
      style="pointer-events: none;"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>,
]
`;
